# diplomski_rad

./: README.md
FL_STAEformer_online/: client.py  pyproject.toml  server.py  task.py
FL_STAEformer_online/model/: STAEformer.yaml  train.py
FL_stgcn_online/: client.py  pyproject.toml  server.py  task.py
data_PEMSD7/locations/: locations.json
environments/: STAEformer.yaml  STGCN.yaml
