[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-staeformer"
version = "1.0.0"

[tool.flwr.app]
publisher = "duje"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-server-rounds = 1
local-epochs = 1
online-steps = 1
batch-size = 16
learning-rate = 0.001
fraction-train = 1.0
fraction-evaluate = 1.0
num-partitions = 4
dataset = "data_PEMSD7"
locations-json-path = "../data_PEMSD7/locations/locations.json"
cloudlet-experiment = "experiment_4_clients"
dataset-path = "../data_PEMSD7"
