[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fl-stgcn"
version = "1.0.0"

[tool.flwr.app]
publisher = "duje"

[tool.flwr.app.components]
serverapp = "server:app"
clientapp = "client:app"

[tool.flwr.app.config]
num-server-rounds = 1
local-epochs = 1
online-steps = 1
batch-size = 32
learning-rate = 0.001
fraction-train = 1.0
fraction-evaluate = 1.0
num-partitions = 4
dataset = "data_PEMSD7"
locations-json-path = "../data_PEMSD7/locations/locations.json"
cloudlet-experiment = "experiment_4_clients"
dataset-path = "../data_PEMSD7"


#######################################################################
# CONFIGURATION MIGRATION NOTICE:
#
# What was previously called "federation config" for SuperLink
# connections in pyproject.toml has been renamed and moved.
#
# These settings are now **SuperLink connection configuration**
# and are defined in the Flower configuration file.
#
# The entries below are commented out intentionally and are kept
# only as a migration reference.
#
# Docs: https://flower.ai/docs/framework/ref-flower-configuration.html
#######################################################################

# [tool.flwr.federations]
# default = "local"

# [tool.flwr.federations.local]
# options.num-supernodes = 4
